Fixing bookmark scrollbar problem and making sure you can see the form when it pops up.

--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -212,7 +212,7 @@ form#wrangle-select-fandom p, form#wrangle-select-media p{ display:inline; margi
 
 /* BOOKMARKING */
 #dynamic-bookmark { position: absolute;  z-index: 40; }
-#dynamic-bookmark #bookmark-form { border: 2px solid; height: 26em; width: 36em; padding: 1em; overflow:auto; }
+#dynamic-bookmark #bookmark-form { border: 2px solid; height: 100%; width: 36em; padding: 1em; overflow:auto; }
 #dynamic-bookmark p#close-popup {top:0; right:2em; position:absolute; z-index:60;}
 #bookmark-form h4 {margin:auto;}
 #bookmark-form dd { margin-top: 0; padding:0.25em 0.5625em 0.25em 0;}
